# rust-project

./: Cargo.toml  main
src/: lib.rs  main.rs
src/api/: create_account.rs  deposit.rs  get_account.rs  mod.rs  transfer.rs  withdraw.rs
src/error/: astra_error.rs  mod.rs
src/model/: account.rs  clients.rs  mod.rs  transaction.rs
src/service/redis/: mod.rs  redis_service.rs  redis_service_adapter.rs
src/validation/: validation.rs
