[package]
name = "astra"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "^0.5"
axum-macros = "^0.2"
derive_builder = "^0.11"
redis = { version = "0.21", features = ["aio", "tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"
tokio = { version = "1", features = ["full"] }
tracing = "^0.1"
tracing-subscriber = "^0.2"
uuid = { version = "0.8", features = ["serde", "v4"] }